delivery-tracking.page.html: Binding star counts and click function to store to mimic star rating. delivery-tracking.page.scss: Apply styles for default and clicked star. delivery-tracking.page.ts: Use ionic's ionViewWillEnter life hook to recive cart data when the count down just about to start. Warp up the condition check to avoid step jump. Reset steps, counting and push state when the check button is clicked. Call php file to Update shopping cart with specific cartID. order.page.ts: Add necessary argument to call httpService.getData(). payment.page.ts: Recive cart data on ionViewWillEnter life hook. connect.php: I'm sorry that I'm don't konw how to untrack this thing. toCart.php: Return cartID for later usage. player-tabs.page.html: Lock up all tabs when the counting step is reach to finish, unlock with  check button click. player-tabs.ts: Import httpService to get the counting step. http.service.ts: Remove httpHeaders. Split the get function into two parts to avoid copy paste for the same loop. shopping-cart-modal.ts: Import httpService, assign cart datas to the service for later usage. updateCart.php: Update the cart that matches the giving ID. connect1.php: DELETE.

--- a/src/app/delivery-tracking/delivery-tracking.page.scss
+++ b/src/app/delivery-tracking/delivery-tracking.page.scss
@@ -16,7 +16,7 @@
             border: 5px solid #FA744A;
             border-radius: 50px;
             background-color: #FA744A;
-            margin-top: -1vh;
+            margin-top: -1.1vh;
             transition: all .3s ease-in-out;
         }
         .currentStep{
@@ -53,9 +53,16 @@
             display: flex;
             justify-content: center;
             list-style: none;
+            P{
+                margin: -0.2vh 2vw 0 0;
+            }
+            li{
+                color: gray;
+                cursor: pointer;
+            }
+            .fillStar{
+                color: #FFC107;
+            }
         }
     }
 }
-
-/*linear-gradient(45deg ,white, #eddeda)
-#EDEDED*/
